обработала и перезапестила код

--- a/prod.ipynb
+++ b/prod.ipynb
@@ -9,73 +9,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Данные из таблицы orders успешно загружены.\n",
-      "\n",
-      "Пример данных из таблицы orders:\n",
-      "                           order_id                       customer_id  \\\n",
-      "0  00010242fe8c5a6d1ba2dd792cb16214  871766c5855e863f6eccc05f988b23cb   \n",
-      "1  00018f77f2f0320c557190d7a144bdd3  eb28e67c4c0b83846050ddfb8a35d051   \n",
-      "2  00042b26cf59d7ce69dfabb4e55b4fd9  64b576fb70d441e8f1b2d7d446e483c5   \n",
-      "3  00048cc3ae777c65dbb7d2a0634bc1ea  85c835d128beae5b4ce8602c491bf385   \n",
-      "4  00054e8431b9d7675808bcb819fb4a32  635d9ac1680f03288e72ada3a1035803   \n",
-      "\n",
-      "  purchase_timestamp delivered_customer_date  \n",
-      "0         2017-09-13              2017-09-20  \n",
-      "1         2017-04-26              2017-05-12  \n",
-      "2         2017-02-04              2017-03-01  \n",
-      "3         2017-05-15              2017-05-22  \n",
-      "4         2017-12-10              2017-12-18  \n",
-      "\n",
-      "Пример данных из таблицы products_category:\n",
-      "                         product_id product_category_name\n",
-      "0  00066f42aeeb9f3007548bb9d3f33c38             perfumery\n",
-      "1  00088930e925c41fd95ebfe695fd2655                  auto\n",
-      "2  0009406fd7479715e4bef61dd91f2462        bed_bath_table\n",
-      "3  000b8f95fcb9e0096488278317764d19            housewares\n",
-      "4  000d9be29b5207b54e86aa1b1ac54872         watches_gifts\n",
-      "\n",
-      "Пример данных из таблицы order_items:\n",
-      "                           order_id  Delivery time  order_item_id  \\\n",
-      "0  ec7a019261fce44180373d45b442d78f            6.0              1   \n",
-      "1  bf44408de1d05eef70fb026ba64a90ea            6.0              1   \n",
-      "2  e1fe072ef14b519af1f0a8ed997c1301            7.0              1   \n",
-      "3  f53b39c6c91ce86717c15d8e4e5da0c2            4.0              1   \n",
-      "4  157ec3dc3f38cdbd2706bd216edfe8fb            7.0              1   \n",
-      "\n",
-      "                         product_id                         seller_id   price  \\\n",
-      "0  f5d8f4fbc70ca2a0038b9a0010ed5cb0  48efc9d94a9834137efd9ea76b065a38   10.90   \n",
-      "1  1a2d84c11fbc7b3d7c0a10206c085ce5  b76dba6c951ab00dc4edf0a1aa88037e   10.49   \n",
-      "2  743801b34cc44776de511ba8eff778e2  48efc9d94a9834137efd9ea76b065a38    9.90   \n",
-      "3  913580fde3e72c3b3e4ce0b79963bee6  b76dba6c951ab00dc4edf0a1aa88037e   10.99   \n",
-      "4  27066995b777fb84dbcb25961fd6d007  46dc3b2cc0980fb8ec44634e21d2718e  159.99   \n",
-      "\n",
-      "   Sales value  freight_value  \n",
-      "0        10.90           8.72  \n",
-      "1        10.49          10.96  \n",
-      "2         9.90          14.52  \n",
-      "3        10.99          14.11  \n",
-      "4       159.99          15.29  \n"
+      "Requirement already satisfied: pandas in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.2.3)\n",
+      "Requirement already satisfied: sqlalchemy in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.0.36)\n",
+      "Requirement already satisfied: openpyxl in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.1.5)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2024.2)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from sqlalchemy) (4.12.2)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from sqlalchemy) (3.1.1)\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openpyxl) (2.0.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\лилия\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
      ]
     }
    ],
+   "source": [
+    "!pip install pandas sqlalchemy openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import uuid\n",
     "\n",
     "\n",
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "products_category = pd.read_excel(r'C:\\projects\\ozon\\datasets\\Тестовое_к_Агате_сокращенный_вариант (3).xlsx', sheet_name='products_category')\n",
-    "orders = pd.read_excel(r'C:\\projects\\ozon\\datasets\\Тестовое_к_Агате_сокращенный_вариант (3).xlsx', sheet_name='orders')\n",
-    "order_items = pd.read_excel(r'C:\\projects\\ozon\\datasets\\Тестовое_к_Агате_сокращенный_вариант (3).xlsx', sheet_name='order_items')\n",
+    "relative_var = os.path.join('.', 'datasets', 'Тестовое_к_Агате_сокращенный_вариант (3).xlsx')\n",
+    "products_category = pd.read_excel(relative_var, sheet_name='products_category')\n",
+    "orders = pd.read_excel(relative_var, sheet_name='orders')\n",
+    "order_items = pd.read_excel(relative_var, sheet_name='order_items')\n",
     "\n",
     "\n",
     "try:\n",
@@ -89,20 +62,7 @@
     "        orders['purchase_timestamp'].fillna(pd.Timestamp('1970-01-01'), inplace=True)\n",
     "except Exception as e:\n",
     "    print(f\"Ошибка при обработке дат: {e}\")\n",
-    "\n",
-    "\n",
-    "table_name = 'orders'  \n",
-    "orders.to_sql(table_name, engine, if_exists='replace', index=False)\n",
-    "\n",
-    "\n",
-    "print(f\"Данные из таблицы {table_name} успешно загружены.\")\n",
-    "print(\"\\nПример данных из таблицы orders:\")\n",
-    "print(orders.head())\n",
-    "\n",
-    "print(\"\\nПример данных из таблицы products_category:\")\n",
-    "print(products_category.head())\n",
-    "print(\"\\nПример данных из таблицы order_items:\")\n",
-    "print(order_items.head())"
+    "\n"
    ]
   },
   {
@@ -114,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 742,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 743,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 744,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 745,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1459,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1547,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 748,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 749,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 751,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1917,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 757,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 758,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 759,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 760,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2106,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 761,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2139,12 +2099,12 @@
     "TRUNCATE TABLE order_items CASCADE;\n",
     "TRUNCATE TABLE products_category CASCADE;\n",
     "\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
-    "with engine.connect() as connection:\n",
-    "    connection.execute(text(truncate_query))\n",
-    "\n",
+    "\"\"\" \n",
+    "try:\n",
+    "    with engine.connect() as connection:\n",
+    "        connection.execute(text(truncate_query))\n",
+    "except Exception as e:\n",
+    "    print(f\"Ошибка при удалении данных: {e}\")\n",
     "print(\"Все данные из таблиц успешно удалены.\")"
    ]
   },
@@ -2157,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 762,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2169,12 +2129,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "db_user = \"myuser\"\n",
     "db_password = \"mypassword\"\n",
@@ -2235,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 763,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2319,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 765,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -2451,7 +2405,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Данные products_category успешно сохранены в 'datasets/products_category.csv'.\n",
+      "Данные order_items успешно сохранены в 'datasets/order_items.csv'.\n",
+      "Данные orders успешно сохранены в 'datasets/order_items.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_dir = os.path.join('.', 'datasets')\n",
+    "\n",
+    "if not os.path.exists(output_dir):\n",
+    "    os.makedirs(output_dir)\n",
+    "\n",
+    "# Сохранение DataFrame в формате CSV в папку datasets\n",
+    "try:\n",
+    "    products_category.to_csv(os.path.join(output_dir, 'products_category.csv'), index=False)\n",
+    "    print(\"Данные products_category успешно сохранены в 'datasets/products_category.csv'.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Ошибка при сохранении products_category: {e}\")\n",
+    "\n",
+    "try:\n",
+    "    order_items.to_csv(os.path.join(output_dir, 'order_items.csv'), index=False)\n",
+    "    print(\"Данные order_items успешно сохранены в 'datasets/order_items.csv'.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Ошибка при сохранении order_items: {e}\")\n",
+    "try:\n",
+    "    orders.to_csv(os.path.join(output_dir, 'orders.csv'), index=False)\n",
+    "    print(\"Данные orders успешно сохранены в 'datasets/order_items.csv'.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Ошибка при сохранении order_items: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2481,8 +2475,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
-    "orders = pd.read_csv('orders.csv', sep=',')  \n",
     "\n",
     "\n",
     "\n",
@@ -2555,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2619,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2691,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2764,7 +2756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2846,7 +2838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 771,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
